@@ -23,6 +23,10 @@ QString newlineToBr(const QString &input);
  */
 QString linkify(const QString &input, const QString &extra=QString());
 
+QString wrapEmoji(
+	const QString &input,
+	const QString &replacement = "<span class=\"emoji\">\\1</span>");
+
 }
 
 #endif
